@@ -2,7 +2,6 @@ package uk.gov.hmcts.reform.iahearingsapi.domain.service.holidaydates;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.context.annotation.Bean;
 import org.springframework.stereotype.Component;
 
@@ -19,6 +18,6 @@ public class HolidayLoader {
         UkHolidayDates holidayDates = govUkHolidayDatesClient.getHolidayDates();
         return holidayDates.getEnglandAndWales().getEvents().stream()
             .map(HolidayDate::getDate)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
